Adjust z-index down to prevent potential conflicts with other elements

--- a/src/content-handlers/iiif/modules/uv-shared-module/css/overlays.less
+++ b/src/content-handlers/iiif/modules/uv-shared-module/css/overlays.less
@@ -6,7 +6,7 @@
         left: 0;
         background: @overlay-modal-bg;
         background-image: data-uri('../img/modal_bg.gif');
-        z-index: 100;
+        z-index: 30;
     }
 
     .overlay {
